# wrench

./: .bazelrc  .gitignore  .goreleaser.yaml  .goreleaser.yml  BUILD.bazel  Dockerfile  LICENSE  Makefile  README.md  WORKSPACE  go.mod  go.sum  main.go  tools.go
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: build_and_test.yaml  goreleaser.yaml  publish-docker-release.yaml  release.yaml  release.yml
_examples/: schema.sql
_examples/migrations/: 000001.sql
bazel/: deps.bzl
cmd/: BUILD.bazel  apply.go  apply_test.go  cmd.go  create.go  drop.go  errors.go  export_test.go  instance.go  load.go  migrate.go  migrate_test.go  reset.go  root.go  root_test.go  truncate.go
internal/fs/: fs.go
pkg/spanner/: BUILD.bazel  admin.go  client.go  client_test.go  config.go  errors.go  memefish.go  migration.go  migration_test.go  separator.go
pkg/spanner/testdata/: ddl.sql  dml.sql  schema.sql  schema_loaded.sql  schema_with_comment.sql
pkg/spanner/testdata/hotfix/a/: 000100.sql  000200.sql
pkg/spanner/testdata/hotfix/b/: 000101_hotfix.sql
pkg/spanner/testdata/migrations/: 000002_test.sql  000003.sql  000004.sql  000005.sql
