version = "1.0.0"

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

# gazelle:prefix github.com/mercari/wrench
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mercari/wrench",
    visibility = ["//visibility:private"],
    x_defs = {"github.com/mercari/wrench/cmd.Version": version},
    deps = [
        "//cmd:go_default_library",
        "//pkg/spanner:go_default_library",
    ],
)

go_binary(
    name = "wrench",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    embed = [":go_default_library"],
)

container_push(
    name = "registry",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "mercari/wrench",
    tag = version,
)
