version = "1.0.2"

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "nogo")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

# gazelle:prefix github.com/cloudspannerecosystem/wrench
gazelle(name = "gazelle")

nogo(
    name = "nogo",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_tools//go/analysis/passes/atomic:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/bools:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/buildtag:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/nilfunc:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/printf:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/structtag:go_tool_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/cloudspannerecosystem/wrench",
    visibility = ["//visibility:private"],
    x_defs = {"github.com/cloudspannerecosystem/wrench/cmd.Version": version},
    deps = [
        "//cmd:go_default_library",
        "//pkg/spanner:go_default_library",
    ],
)

go_binary(
    name = "wrench",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    embed = [":go_default_library"],
)

container_push(
    name = "registry",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "mercari/wrench",
    tag = version,
)
