load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "apply.go",
        "cmd.go",
        "create.go",
        "drop.go",
        "errors.go",
        "load.go",
        "migrate.go",
        "reset.go",
        "root.go",
    ],
    importpath = "github.com/cloudspannerecosystem/wrench/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/spanner:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "export_test.go",
        "migrate_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
)
