load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "admin.go",
        "client.go",
        "config.go",
        "errors.go",
        "migration.go",
    ],
    importpath = "github.com/cloudspannerecosystem/wrench/pkg/spanner",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_hashicorp_go_multierror//:go_default_library",
        "@com_google_cloud_go_spanner//:go_default_library",
        "@com_google_cloud_go_spanner//admin/database/apiv1:go_default_library",
        "@com_google_cloud_go_spanner//admin/instance/apiv1:go_default_library",
        "@com_google_cloud_go_spanner//spansql:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_google_genproto//googleapis/spanner/admin/database/v1:go_default_library",
        "@org_golang_google_genproto//googleapis/spanner/admin/instance/v1:go_default_library",
        "@org_golang_google_genproto//googleapis/spanner/v1:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "client_test.go",
        "migration_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "@com_github_google_uuid//:go_default_library",
        "@com_google_cloud_go_spanner//:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
        "@org_golang_google_genproto//googleapis/spanner/v1:go_default_library",
    ],
)
